# AAA

./: .AGENTS.md  .REPO_ROUTING_CONSTITUTION.md  .aaa-holds-state.json  .gemini  .git_commit  .gitignore  .gitleaks.toml  .gitleaksignore  .kimi  .opencode  .secrets.baseline  000_INIT.md  333-AGI.json  555-ASI.json  777-forge.json  888-APEX.json  A-ARCHIVE.json  A-AUDIT.json  AAA-CLEANUP-RECEIPT-2026-05-25.md  AAAA_PATTERN.md  AAA_AGENTS_REGISTRY.json  AAA_CHARTER.md  AAA_ENTRY.md  AAA_FEDERATION_CONSTITUTION.md  AAA_SPEAKING_PROTOCOL.md  AAA_TELEGRAM_VISIBILITY_PROTOCOL.md  AGENT.md  AGENTS.md  AGENT_INDEX.json  ARCHIVE_BRANCHES.md  ARCH_OMEGA.md  ARCH_OMEGA_MEMORY_v0.md  ARIF.md  ARIFOS_CONSTITUTION_HASH.txt  BLAST_RADIUS.md  BOOT.md  BOOTSTRAP.md  BOOTSTRAP_CONTEXT.md  BOOTSTRAP_MINIMAL.md  BOUNDARY.md  (+95 more)
.aaa/: ROOT_ENTROPY.md  root-entropy-audit-2026-06-20.md
.clinerules/: 00-aaa-bootstrap.md  10-aaa-build-test.md  20-aaa-self-audit.md  30-aaa-federation.md
.github/: CODEOWNERS  COPILOT_INSTRUCTIONS.md  PULL_REQUEST.md  copilot-instructions.md  dependabot.yml  repo-policy.yml  (+1 more)
aaa-a2a/: AAA_ZEN.md  pyproject.toml
aaa-a2a/src/aaa_a2a/: __init__.py  executor.py  guard.py  models.py  server.py
aaa-a2a/src/aaa_a2a.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
aaa-a2a/src/aaa_a2a/middleware/: __init__.py  audit.py  floors.py  identity.py  verdicts.py
aaa-a2a/src/aaa_a2a/routing/: __init__.py  organ_router.py
aaa-a2a/tests/: test_floors.py  test_identity.py  test_routing.py
agents/opencode/arifos_openai_agents/: README.md  pyproject.toml
agents/opencode/arifos_openai_agents/arifos_openai_agents/: __init__.py  client.py  decision.py  exceptions.py  guards.py  kernel.py  tools.py
agents/opencode/arifos_openai_agents/arifos_openai_agents/tests/: test_21_contract.py  test_live_integration.py
agents/opencode/arifos_openai_agents/examples/: example_codex_agent.py
(+3535 files in other folders)
