[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arifos_openai_agents"
version = "0.1.0"
description = "Cognition firewall wrapper for OpenAI Agents SDK"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Muhammad Arif bin Fazil", email = "arif@arif-fazil.com" },
]
dependencies = [
    "openai-agents>=0.17.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["arifos_openai_agents*"]
exclude = ["tests*", "examples*"]
